--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/bhaskarmac/webpack-starter#readme",
   "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.1",
+    "html-webpack-plugin": "2.30.1",
+    "preload-webpack-plugin": "2.0.0",
     "webpack": "3.8.1"
   }
 }
